results/graph_memory_v2/random30_parallel_01/temporal-reasoning/0028_0db4c65d/windows/window_0011.txt
[2022-12-26T02:39:01, Mon] 1.User: the --no-builds method does not work; it still adds uninstalled pip packages
[2022-12-26T02:39:01.500000, Mon] 2.User: tell me the command of creating pip requirements.txt fiele
[2022-12-26T02:39:02, Mon] 3.User: when using pipreqs --force --encoding=utf-8 command, it gives me the following error:

File "d:\CS\projects\graduation\_project\.conda\lib\ast.py", line 50, in parse
 return compile(source, filename, mode, flags,
 File "", line 2
 print add\_code\_to\_python\_process.run\_python\_code(3736, "print(20)", connect\_debugger\_tracing=False)
 ^
SyntaxError: invalid syntax
[2022-12-26T02:39:02.500000, Mon] 4.User: is there a way to export environment.yml file such that it mentions only the used pip packages, not all the installed pip packages?
[2022-12-26T02:39:03, Mon] 5.User: ok, but can you suggest another method?
[2022-12-26T02:39:03.500000, Mon] 6.User: utf-8 vs utf-8-sig
[2022-12-26T07:04:00.500000, Mon] 7.User: 10. inside the zone, anything that doesn't require fuel or electricity. Outside the zone, people also mostly walk, or ride horses, because fuel is extremely expensive, and cars, trains, airplanes etc. do exist, but they are just for the few belonging to mid-to-higher social classes.

11. Mostly oil, coal, lithium mines etc. Similar to 21st century.

12. They buy it or rent from Hybrid kingdoms. This is all rapidly dwindling outside the hybrid kingdoms.

13. They have meetings, but only through Raziel. Even when they're in person, Raziel must be present, as he is the only thing keeping them together, advising them all ( even though he's becoming more unreliable by the day, due to Tiamat radiation ).

14. Not really, but due to the failing infrastructure, huge parts of the world now have a much lower population, so there are forests re-growing, deserts expanding, rivers flooding etc.
[2022-12-26T07:04:01, Mon] 8.User: correct on all accounts.
[2022-12-26T07:04:01.500000, Mon] 9.User: if we disregard the government policies, social cohesion and individual preparedness, which cities are most likely to survive the crises I mentioned, and develop into city-states. 

I imagine that the blast would take out all the cities east of the rocky mountains, and maybe west from New York. Down south almost to Houston TX. etc. so everything outside would initially have some problems with their tech and computers, but be repaired in days or weeks.
[2022-12-26T07:04:02, Mon] 10.User: so, it's something similar to an EMP blast, but it's mostly subatomic particles, as Tiamat is a sort of black hole. How many people would be left without electricity and computers from such a huge blast area ?
[2022-12-26T07:04:02.500000, Mon] 11.User: the zone would then increase and decrease for a few miles, as if pulsating for years, but it would gradually grow several meters every year.
[2022-12-26T07:04:03, Mon] 12.User: By the time of the events in the novel, everyone had given up on halting the growth of the zone. The Hybrids do send some scientists from time to time, but as the results are unsatisfactory to them, they lose interest for a while. The hybrids are inconsistent, as they have their own court dramas and other things to do.
[2022-12-28T03:36:00.500000, Wed] 13.User: Write me the “Conclusion” part of the article in 50 words. Include a call to action to the persona and provide this information about myself: I am a solicitor and construction lawyer with more than 10 years experience specialising in construction law. I regularly advise homeowners and builders and developers regarding their contractual and legal rights. I represent homeowners and builders and developers in NSW, VIC, and QLD, Australia as well as all courts of competent jurisdiction. I have advised homeowners, builders, and contractors and developers regarding repudiating a building contract. I have advised them on their contract rights, risks and obligations. I have negotiated and amended contracts to reflect their intentions.
[2022-12-28T19:38:00.500000, Wed] 14.User: I am going on a vacation to San Juan, Puerto Rico on June 29, 2023 through July 4, 2023. There are 2 of us on this vacation. We are staying at the Courtyard by Marriott Isla Verde Beach Resort. Our flight arrives in at San Juan airport on June 29 at 1:30am, and we return home on a flight that leaves San Juan airport on July 4 at 2pm. You are our travel agent. I would like you to help us plan our trip. We would like to spend 60% of our time exploring downtown San Juan and the surrounding area, and 40% of our time at the beaches. We would like at least 4 hours to see the rain forrest. We also would like to see the various castles in downtown San Juan. Include food and restaurant plans for lunch and dinner. We would like to spend the majority of our time within 30 minutes of drive time from our hotel, except for 1 day when we go to the rain forrest. Please prepare a full travel itinerary
[2022-12-28T19:38:01, Wed] 15.User: I made a mistake in my original prompt. We arrive late June 28 at 1:30am instead of on June 29. Can you regenerate our itinerary? Additionally, can you provide additional details about what we should explore when in downtown San Jaun. We would also like to go to some local bars for drinks scattered throughout our vacation